--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             left: 50%;
             transform: translate(-50%, -50%);
             object-fit: cover;
-            filter: brightness(0.5); /* تعتيم الفيديو لبروز المنتجات */
+            filter: brightness(0.5); 
         }
 
         /* الهيدر */
         header {
-            background: rgba(0, 0, 0, 0.4);
-            backdrop-filter: blur(8px);
-            padding: 20px 5%;
+            background: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(10px);
+            padding: 10px 5%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -59,13 +59,16 @@
             z-index: 1000;
         }
 
-        .logo { 
-            font-size: 38px; 
-            font-weight: 900; 
-            color: var(--main-gold);
-            text-shadow: 0 0 15px rgba(217, 179, 130, 0.5);
+        /* تنسيق الشعار */
+        .logo-img {
+            height: 80px; /* يمكنك تكبير أو تصغير الشعار من هنا */
             cursor: pointer;
             user-select: none;
+            transition: 0.3s;
+        }
+        
+        .logo-img:active {
+            transform: scale(0.95);
         }
 
         /* سلة المشتريات */
@@ -94,7 +97,7 @@
 
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-        h1 { font-size: 3rem; text-align: center; margin-bottom: 40px; }
+        h1 { font-size: 2.5rem; text-align: center; margin-bottom: 40px; text-shadow: 2px 2px 10px rgba(0,0,0,0.5); }
 
         /* كروت المنتجات */
         .products-grid {
@@ -107,159 +110,3 @@
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(12px);
             border-radius: 20px;
-            overflow: hidden;
-            border: 1px solid rgba(255,255,255,0.2);
-            transition: 0.4s;
-        }
-
-        .product-card img { width: 100%; height: 380px; object-fit: cover; }
-
-        .p-info { padding: 25px; text-align: center; }
-
-        .p-price { 
-            color: var(--main-gold); 
-            font-size: 2rem; 
-            font-weight: 900; 
-            margin: 15px 0; 
-        }
-
-        .add-to-cart {
-            width: 100%;
-            background: var(--main-gold);
-            color: #222;
-            border: none;
-            padding: 12px;
-            border-radius: 12px;
-            font-size: 1.1rem;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        /* لوحة التحكم */
-        .admin-box { 
-            background: white; 
-            padding: 30px; 
-            border-radius: 20px; 
-            color: #333;
-            max-width: 500px;
-            margin: auto;
-        }
-        input { width: 100%; padding: 12px; margin: 8px 0; border-radius: 8px; border: 1px solid #ddd; }
-    </style>
-</head>
-<body>
-
-<div class="video-container">
-    <video class="video-background" autoplay muted loop playsinline>
-        <source src="https://pixabay.com/videos/download/x-231685_medium.mp4" type="video/mp4">
-    </video>
-</div>
-
-<header>
-    <div class="logo" id="mainLogo" onclick="checkAdminClick()">شبابيك للستائر</div>
-</header>
-
-<div class="cart-btn" onclick="sendWhatsApp()">
-    <span id="cartCount" style="background:white; color:#25D366; padding:2px 10px; border-radius:50%;">0</span>
-    <span>إتمام الطلب</span>
-</div>
-
-<div id="userPage" class="page active">
-    <h1>أناقة تليق بمنزلك</h1>
-    <div class="products-grid" id="userProducts"></div>
-</div>
-
-<div id="adminPage" class="page">
-    <div class="admin-box">
-        <h2 style="text-align: center;">إدارة المتجر</h2>
-        <input id="name" placeholder="اسم المنتج">
-        <input id="price" type="number" placeholder="السعر">
-        <input id="image" placeholder="رابط الصورة">
-        <button onclick="addProduct()" style="width:100%; padding:15px; background:var(--main-gold); border:none; border-radius:10px; font-weight:bold; cursor:pointer;">نشر</button>
-        <hr>
-        <div id="adminProductsGrid"></div>
-        <button onclick="logout()" style="width:100%; margin-top:10px; background:#f4f4f4; border:none; padding:10px; cursor:pointer;">خروج</button>
-    </div>
-</div>
-
-<script>
-    let products = JSON.parse(localStorage.getItem("shababik_v3")) || [];
-    let cart = [];
-    let clickCount = 0;
-
-    function checkAdminClick() {
-        clickCount++;
-        if (clickCount === 5) {
-            let pass = prompt("رمز الدخول:");
-            if (pass === "1234") showPage('adminPage');
-            clickCount = 0;
-        }
-        setTimeout(() => clickCount = 0, 3000);
-    }
-
-    function showPage(pageId) {
-        document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-        document.getElementById(pageId).classList.add('active');
-        if(pageId === 'userPage') renderUser();
-        if(pageId === 'adminPage') renderAdmin();
-    }
-
-    function addProduct() {
-        const name = document.getElementById("name").value;
-        const price = document.getElementById("price").value;
-        const image = document.getElementById("image").value;
-        if(!name || !price || !image) return alert("أكمل الحقول");
-        products.push({ id: Date.now(), name, price, image });
-        localStorage.setItem("shababik_v3", JSON.stringify(products));
-        renderAdmin();
-        alert("تم الحفظ");
-    }
-
-    function renderUser() {
-        const container = document.getElementById("userProducts");
-        container.innerHTML = products.map(p => `
-            <div class="product-card">
-                <img src="${p.image}">
-                <div class="p-info">
-                    <h3>${p.name}</h3>
-                    <div class="p-price">${p.price} د.ع</div>
-                    <button class="add-to-cart" onclick="addToCart('${p.name}', ${p.price})">إضافة للطلب</button>
-                </div>
-            </div>
-        `).join('');
-    }
-
-    function renderAdmin() {
-        const container = document.getElementById("adminProductsGrid");
-        container.innerHTML = products.map(p => `
-            <div style="display:flex; justify-content:space-between; padding:10px; border-bottom:1px solid #eee; color: #333;">
-                <span>${p.name}</span>
-                <button onclick="deleteProduct(${p.id})" style="color:red; background:none; border:none; cursor:pointer;">حذف</button>
-            </div>
-        `).join('');
-    }
-
-    function deleteProduct(id) {
-        products = products.filter(p => p.id !== id);
-        localStorage.setItem("shababik_v3", JSON.stringify(products));
-        renderAdmin();
-    }
-
-    function addToCart(name, price) {
-        cart.push({name, price});
-        document.getElementById("cartCount").innerText = cart.length;
-    }
-
-    function sendWhatsApp() {
-        if(cart.length === 0) return alert("السلة فارغة");
-        let msg = "طلب من شبابيك:\n";
-        cart.forEach((item, i) => msg += `${i+1}. ${item.name}\n`);
-        window.open(`https://wa.me/9647883002797?text=${encodeURIComponent(msg)}`);
-    }
-
-    function logout() { showPage('userPage'); }
-    window.onload = renderUser;
-</script>
-
-</body>
-</html>
