--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         :root {
             --main-gold: #d9b382;
             --white: #ffffff;
+            --glass: rgba(255, 255, 255, 0.1);
         }
 
         body, html {
@@ -21,7 +22,7 @@
             height: 100%;
         }
 
-        /* حاوية الفيديو لتغطية كامل الشاشة */
+        /* خلفية الفيديو - تغطية كاملة ومستمرة */
         .video-container {
             position: fixed;
             top: 0;
@@ -33,23 +34,23 @@
         }
 
         .video-background {
+            position: absolute;
+            top: 50%;
+            left: 50%;
             min-width: 100%;
             min-height: 100%;
             width: auto;
             height: auto;
-            position: absolute;
-            top: 50%;
-            left: 50%;
             transform: translate(-50%, -50%);
             object-fit: cover;
-            filter: brightness(0.5); 
+            filter: brightness(0.4); /* تعتيم الفيديو لجمالية المحتوى */
         }
 
-        /* الهيدر */
+        /* الهيدر المحسن */
         header {
-            background: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(10px);
-            padding: 10px 5%;
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(15px);
+            padding: 15px 5%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -59,19 +60,17 @@
             z-index: 1000;
         }
 
-        /* تنسيق الشعار */
         .logo-img {
-            height: 80px; /* يمكنك تكبير أو تصغير الشعار من هنا */
+            height: 80px;
+            width: 80px;
+            border-radius: 50%;
+            object-fit: cover;
             cursor: pointer;
-            user-select: none;
+            box-shadow: 0 0 15px rgba(217, 179, 130, 0.3);
             transition: 0.3s;
         }
-        
-        .logo-img:active {
-            transform: scale(0.95);
-        }
 
-        /* سلة المشتريات */
+        /* سلة المشتريات والطلب */
         .cart-btn {
             position: fixed;
             bottom: 30px;
@@ -88,18 +87,18 @@
             display: flex;
             align-items: center;
             gap: 12px;
-            transition: 0.3s;
+            border: 2px solid rgba(255,255,255,0.2);
         }
 
-        /* الصفحات */
+        /* تنسيق الصفحات */
         .page { display: none; padding: 40px 5%; max-width: 1400px; margin: auto; color: white; }
-        .active { display: block; animation: fadeIn 1s ease; }
+        .active { display: block; animation: fadeIn 0.8s ease-in-out; }
 
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
 
-        h1 { font-size: 2.5rem; text-align: center; margin-bottom: 40px; text-shadow: 2px 2px 10px rgba(0,0,0,0.5); }
+        h1 { font-size: 2.5rem; text-align: center; margin-bottom: 40px; text-shadow: 0 4px 10px rgba(0,0,0,0.5); }
 
-        /* كروت المنتجات */
+        /* شبكة المنتجات */
         .products-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -107,6 +106,37 @@
         }
 
         .product-card {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(12px);
-            border-radius: 20px;
+            background: var(--glass);
+            backdrop-filter: blur(10px);
+            border-radius: 25px;
+            overflow: hidden;
+            border: 1px solid rgba(255,255,255,0.15);
+            transition: 0.4s;
+        }
+
+        .product-card:hover { transform: translateY(-10px); background: rgba(255, 255, 255, 0.2); }
+
+        .product-card img { width: 100%; height: 380px; object-fit: cover; }
+
+        .p-info { padding: 25px; text-align: center; }
+
+        .p-price { color: var(--main-gold); font-size: 2rem; font-weight: 900; margin: 15px 0; }
+
+        .add-to-cart {
+            width: 100%;
+            background: var(--main-gold);
+            color: #222;
+            border: none;
+            padding: 15px;
+            border-radius: 15px;
+            font-size: 1.1rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        .add-to-cart:hover { background: var(--white); }
+
+        /* لوحة التحكم */
+        .admin-box { background: white; padding: 35px; border-radius: 25px; color: #333; max-width: 550px; margin: auto; }
+        input { width: 100%; padding: 12px; margin: 10px 0; border-radius: 10px; border: 1
