--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             height: 100%;
         }
 
-        /* حاوية الفيديو لتغطية كامل الشاشة */
+        /* حاوية الفيديو الخلفية */
         .video-container {
             position: fixed;
             top: 0;
@@ -33,25 +33,25 @@
         }
 
         .video-background {
+            position: absolute;
+            top: 50%;
+            left: 50%;
             min-width: 100%;
             min-height: 100%;
             width: auto;
             height: auto;
-            position: absolute;
-            top: 50%;
-            left: 50%;
             transform: translate(-50%, -50%);
             object-fit: cover;
-            filter: brightness(0.5); 
+            filter: brightness(0.4);
         }
 
-        /* الهيدر */
+        /* الهيدر المحسن */
         header {
-            background: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(10px);
-            padding: 10px 5%;
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(15px);
+            padding: 15px 5%;
             display: flex;
-            justify-content: center;
+            justify-content: space-between; /* توزيع العناصر بين اليمين واليسار */
             align-items: center;
             border-bottom: 1px solid rgba(255,255,255,0.1);
             position: sticky;
@@ -59,23 +59,31 @@
             z-index: 1000;
         }
 
-        /* تنسيق الشعار */
-        .logo-img {
-            height: 80px; /* يمكنك تكبير أو تصغير الشعار من هنا */
+        /* اسم المتجر في المنتصف */
+        .store-name {
+            font-size: 32px;
+            font-weight: 900;
+            color: var(--main-gold);
+            text-shadow: 0 0 15px rgba(217, 179, 130, 0.5);
+            flex-grow: 1;
+            text-align: center;
             cursor: pointer;
             user-select: none;
-            transition: 0.3s;
         }
-        
-        .logo-img:active {
-            transform: scale(0.95);
+
+        /* الصورة في جهة اليسار */
+        .side-logo {
+            height: 100px; /* حجم أكبر كما طلبت */
+            width: auto;
+            object-fit: contain;
+            transition: 0.3s;
         }
 
         /* سلة المشتريات */
         .cart-btn {
             position: fixed;
             bottom: 30px;
-            left: 30px;
+            right: 30px; /* نقلتها لليمين لتعادل وجود الصورة في اليسار */
             background: #25D366;
             color: white;
             padding: 15px 30px;
@@ -88,18 +96,17 @@
             display: flex;
             align-items: center;
             gap: 12px;
-            transition: 0.3s;
         }
 
-        /* الصفحات */
+        /* تنسيق الصفحات */
         .page { display: none; padding: 40px 5%; max-width: 1400px; margin: auto; color: white; }
-        .active { display: block; animation: fadeIn 1s ease; }
+        .active { display: block; animation: fadeIn 0.8s ease; }
 
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-        h1 { font-size: 2.5rem; text-align: center; margin-bottom: 40px; text-shadow: 2px 2px 10px rgba(0,0,0,0.5); }
+        h1 { font-size: 2.5rem; text-align: center; margin-bottom: 40px; }
 
-        /* كروت المنتجات */
+        /* المنتجات */
         .products-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -108,7 +115,7 @@
 
         .product-card {
             background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(12px);
+            backdrop-filter: blur(10px);
             border-radius: 20px;
             overflow: hidden;
             border: 1px solid rgba(255,255,255,0.2);
@@ -116,53 +123,39 @@
         }
 
         .product-card img { width: 100%; height: 380px; object-fit: cover; }
-
         .p-info { padding: 25px; text-align: center; }
-
-        .p-price { 
-            color: var(--main-gold); 
-            font-size: 2rem; 
-            font-weight: 900; 
-            margin: 15px 0; 
-        }
-
+        .p-price { color: var(--main-gold); font-size: 1.8rem; font-weight: 900; margin: 15px 0; }
+        
         .add-to-cart {
             width: 100%;
             background: var(--main-gold);
-            color: #222;
+            color: #000;
             border: none;
             padding: 12px;
             border-radius: 12px;
-            font-size: 1.1rem;
             font-weight: bold;
             cursor: pointer;
         }
 
-        /* لوحة التحكم */
-        .admin-box { 
-            background: white; 
-            padding: 30px; 
-            border-radius: 20px; 
-            color: #333;
-            max-width: 500px;
-            margin: auto;
-        }
-        input { width: 100%; padding: 12px; margin: 8px 0; border-radius: 8px; border: 1px solid #ddd; }
+        /* لوحة الإدارة */
+        .admin-box { background: white; padding: 30px; border-radius: 20px; color: #333; max-width: 500px; margin: auto; }
+        input { width: 100%; padding: 12px; margin: 8px 0; border-radius: 8px; border: 1px solid #ddd; box-sizing: border-box; }
     </style>
 </head>
 <body>
 
 <div class="video-container">
     <video class="video-background" autoplay muted loop playsinline>
-        <source src="https://pixabay.com/videos/download/x-231685_medium.mp4" type="video/mp4">
+        <source src="https://assets.mixkit.co/videos/preview/mixkit-white-curtains-blowing-in-the-wind-2266-large.mp4" type="video/mp4">
     </video>
 </div>
 
 <header>
-    <img src="https://i.ibb.co/27dQDcwg/621434671-17843797419682424-2042904102832666604-n.jpg" 
-         class="logo-img" 
-         alt="شبابيك للستائر" 
-         onclick="checkAdminClick()">
+    <div style="width: 100px;"></div> 
+
+    <div class="store-name" onclick="checkAdminClick()">شبابيك للستائر</div>
+
+    <img src="https://i.ibb.co/fGr3rT3s/image.png" class="side-logo" alt="شبابيك">
 </header>
 
 <div class="cart-btn" onclick="sendWhatsApp()">
@@ -171,17 +164,17 @@
 </div>
 
 <div id="userPage" class="page active">
-    <h1>أناقة تليق بمنزلك</h1>
+    <h1>أرقى موديلات الستائر</h1>
     <div class="products-grid" id="userProducts"></div>
 </div>
 
 <div id="adminPage" class="page">
     <div class="admin-box">
-        <h2 style="text-align: center;">إدارة المتجر</h2>
-        <input id="name" placeholder="اسم المنتج">
+        <h2 style="text-align: center;">إدارة المنتجات</h2>
+        <input id="name" placeholder="اسم الستارة">
         <input id="price" type="number" placeholder="السعر">
-        <input id="image" placeholder="رابط الصورة">
-        <button onclick="addProduct()" style="width:100%; padding:15px; background:var(--main-gold); border:none; border-radius:10px; font-weight:bold; cursor:pointer;">نشر</button>
+        <input id="image" placeholder="رابط صورة المنتج">
+        <button onclick="addProduct()" style="width:100%; padding:15px; background:var(--main-gold); border:none; border-radius:10px; font-weight:bold; cursor:pointer;">نشر المنتج</button>
         <hr>
         <div id="adminProductsGrid"></div>
         <button onclick="logout()" style="width:100%; margin-top:10px; background:#f4f4f4; border:none; padding:10px; cursor:pointer;">خروج</button>
@@ -189,11 +182,11 @@
 </div>
 
 <script>
-    let products = JSON.parse(localStorage.getItem("shababik_v3")) || [];
+    let products = JSON.parse(localStorage.getItem("shababik_v4")) || [];
     let cart = [];
     let clickCount = 0;
 
-    // الدخول للوحة التحكم عبر الضغط على الشعار 5 مرات
+    // الدخول للوحة التحكم: اضغط على اسم "شبابيك للستائر" 5 مرات
     function checkAdminClick() {
         clickCount++;
         if (clickCount === 5) {
@@ -215,22 +208,22 @@
         const name = document.getElementById("name").value;
         const price = document.getElementById("price").value;
         const image = document.getElementById("image").value;
-        if(!name || !price || !image) return alert("أكمل الحقول");
+        if(!name || !price || !image) return alert("يرجى ملء كافة الحقول");
         products.push({ id: Date.now(), name, price, image });
-        localStorage.setItem("shababik_v3", JSON.stringify(products));
+        localStorage.setItem("shababik_v4", JSON.stringify(products));
         renderAdmin();
-        alert("تم الحفظ بنجاح");
+        alert("تم الحفظ");
     }
 
     function renderUser() {
         const container = document.getElementById("userProducts");
         container.innerHTML = products.map(p => `
             <div class="product-card">
-                <img src="${p.image}">
+                <img src="${p.image}" onerror="this.src='https://via.placeholder.com/300x400?text=Error'">
                 <div class="p-info">
                     <h3>${p.name}</h3>
                     <div class="p-price">${p.price} د.ع</div>
-                    <button class="add-to-cart" onclick="addToCart('${p.name}', ${p.price})">إضافة للطلب</button>
+                    <button class="add-to-cart" onclick="addToCart('${p.name}')">إضافة للسلة</button>
                 </div>
             </div>
         `).join('');
@@ -239,7 +232,7 @@
     function renderAdmin() {
         const container = document.getElementById("adminProductsGrid");
         container.innerHTML = products.map(p => `
-            <div style="display:flex; justify-content:space-between; padding:10px; border-bottom:1px solid #eee; color: #333;">
+            <div style="display:flex; justify-content:space-between; padding:10px; border-bottom:1px solid #eee; color:#333;">
                 <span>${p.name}</span>
                 <button onclick="deleteProduct(${p.id})" style="color:red; background:none; border:none; cursor:pointer;">حذف</button>
             </div>
@@ -247,22 +240,19 @@
     }
 
     function deleteProduct(id) {
-        if(confirm("هل أنت متأكد من الحذف؟")) {
-            products = products.filter(p => p.id !== id);
-            localStorage.setItem("shababik_v3", JSON.stringify(products));
-            renderAdmin();
-        }
+        products = products.filter(p => p.id !== id);
+        localStorage.setItem("shababik_v4", JSON.stringify(products));
+        renderAdmin();
     }
 
-    function addToCart(name, price) {
-        cart.push({name, price});
+    function addToCart(name) {
+        cart.push(name);
         document.getElementById("cartCount").innerText = cart.length;
     }
 
     function sendWhatsApp() {
         if(cart.length === 0) return alert("السلة فارغة");
-        let msg = "طلب جديد من متجر شبابيك:\n";
-        cart.forEach((item, i) => msg += `${i+1}. ${item.name}\n`);
+        let msg = "طلب جديد من شبابيك:\n" + cart.join("\n");
         window.open(`https://wa.me/9647883002797?text=${encodeURIComponent(msg)}`);
     }
 
