--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             backdrop-filter: blur(15px);
             padding: 15px 5%;
             display: flex;
-            justify-content: space-between; /* توزيع العناصر بين اليمين واليسار */
+            justify-content: space-between; 
             align-items: center;
             border-bottom: 1px solid rgba(255,255,255,0.1);
             position: sticky;
@@ -71,194 +71,4 @@
             user-select: none;
         }
 
-        /* الصورة في جهة اليسار */
-        .side-logo {
-            height: 100px; /* حجم أكبر كما طلبت */
-            width: auto;
-            object-fit: contain;
-            transition: 0.3s;
-        }
-
-        /* سلة المشتريات */
-        .cart-btn {
-            position: fixed;
-            bottom: 30px;
-            right: 30px; /* نقلتها لليمين لتعادل وجود الصورة في اليسار */
-            background: #25D366;
-            color: white;
-            padding: 15px 30px;
-            border-radius: 50px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-            cursor: pointer;
-            z-index: 999;
-            font-size: 1.2rem;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            gap: 12px;
-        }
-
-        /* تنسيق الصفحات */
-        .page { display: none; padding: 40px 5%; max-width: 1400px; margin: auto; color: white; }
-        .active { display: block; animation: fadeIn 0.8s ease; }
-
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-
-        h1 { font-size: 2.5rem; text-align: center; margin-bottom: 40px; }
-
-        /* المنتجات */
-        .products-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 30px;
-        }
-
-        .product-card {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            overflow: hidden;
-            border: 1px solid rgba(255,255,255,0.2);
-            transition: 0.4s;
-        }
-
-        .product-card img { width: 100%; height: 380px; object-fit: cover; }
-        .p-info { padding: 25px; text-align: center; }
-        .p-price { color: var(--main-gold); font-size: 1.8rem; font-weight: 900; margin: 15px 0; }
-        
-        .add-to-cart {
-            width: 100%;
-            background: var(--main-gold);
-            color: #000;
-            border: none;
-            padding: 12px;
-            border-radius: 12px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        /* لوحة الإدارة */
-        .admin-box { background: white; padding: 30px; border-radius: 20px; color: #333; max-width: 500px; margin: auto; }
-        input { width: 100%; padding: 12px; margin: 8px 0; border-radius: 8px; border: 1px solid #ddd; box-sizing: border-box; }
-    </style>
-</head>
-<body>
-
-<div class="video-container">
-    <video class="video-background" autoplay muted loop playsinline>
-        <source src="https://assets.mixkit.co/videos/preview/mixkit-white-curtains-blowing-in-the-wind-2266-large.mp4" type="video/mp4">
-    </video>
-</div>
-
-<header>
-    <div style="width: 100px;"></div> 
-
-    <div class="store-name" onclick="checkAdminClick()">شبابيك للستائر</div>
-
-    <img src="https://i.ibb.co/fGr3rT3s/image.png" class="side-logo" alt="شبابيك">
-</header>
-
-<div class="cart-btn" onclick="sendWhatsApp()">
-    <span id="cartCount" style="background:white; color:#25D366; padding:2px 10px; border-radius:50%;">0</span>
-    <span>إتمام الطلب</span>
-</div>
-
-<div id="userPage" class="page active">
-    <h1>أرقى موديلات الستائر</h1>
-    <div class="products-grid" id="userProducts"></div>
-</div>
-
-<div id="adminPage" class="page">
-    <div class="admin-box">
-        <h2 style="text-align: center;">إدارة المنتجات</h2>
-        <input id="name" placeholder="اسم الستارة">
-        <input id="price" type="number" placeholder="السعر">
-        <input id="image" placeholder="رابط صورة المنتج">
-        <button onclick="addProduct()" style="width:100%; padding:15px; background:var(--main-gold); border:none; border-radius:10px; font-weight:bold; cursor:pointer;">نشر المنتج</button>
-        <hr>
-        <div id="adminProductsGrid"></div>
-        <button onclick="logout()" style="width:100%; margin-top:10px; background:#f4f4f4; border:none; padding:10px; cursor:pointer;">خروج</button>
-    </div>
-</div>
-
-<script>
-    let products = JSON.parse(localStorage.getItem("shababik_v4")) || [];
-    let cart = [];
-    let clickCount = 0;
-
-    // الدخول للوحة التحكم: اضغط على اسم "شبابيك للستائر" 5 مرات
-    function checkAdminClick() {
-        clickCount++;
-        if (clickCount === 5) {
-            let pass = prompt("رمز الدخول:");
-            if (pass === "1234") showPage('adminPage');
-            clickCount = 0;
-        }
-        setTimeout(() => clickCount = 0, 3000);
-    }
-
-    function showPage(pageId) {
-        document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-        document.getElementById(pageId).classList.add('active');
-        if(pageId === 'userPage') renderUser();
-        if(pageId === 'adminPage') renderAdmin();
-    }
-
-    function addProduct() {
-        const name = document.getElementById("name").value;
-        const price = document.getElementById("price").value;
-        const image = document.getElementById("image").value;
-        if(!name || !price || !image) return alert("يرجى ملء كافة الحقول");
-        products.push({ id: Date.now(), name, price, image });
-        localStorage.setItem("shababik_v4", JSON.stringify(products));
-        renderAdmin();
-        alert("تم الحفظ");
-    }
-
-    function renderUser() {
-        const container = document.getElementById("userProducts");
-        container.innerHTML = products.map(p => `
-            <div class="product-card">
-                <img src="${p.image}" onerror="this.src='https://via.placeholder.com/300x400?text=Error'">
-                <div class="p-info">
-                    <h3>${p.name}</h3>
-                    <div class="p-price">${p.price} د.ع</div>
-                    <button class="add-to-cart" onclick="addToCart('${p.name}')">إضافة للسلة</button>
-                </div>
-            </div>
-        `).join('');
-    }
-
-    function renderAdmin() {
-        const container = document.getElementById("adminProductsGrid");
-        container.innerHTML = products.map(p => `
-            <div style="display:flex; justify-content:space-between; padding:10px; border-bottom:1px solid #eee; color:#333;">
-                <span>${p.name}</span>
-                <button onclick="deleteProduct(${p.id})" style="color:red; background:none; border:none; cursor:pointer;">حذف</button>
-            </div>
-        `).join('');
-    }
-
-    function deleteProduct(id) {
-        products = products.filter(p => p.id !== id);
-        localStorage.setItem("shababik_v4", JSON.stringify(products));
-        renderAdmin();
-    }
-
-    function addToCart(name) {
-        cart.push(name);
-        document.getElementById("cartCount").innerText = cart.length;
-    }
-
-    function sendWhatsApp() {
-        if(cart.length === 0) return alert("السلة فارغة");
-        let msg = "طلب جديد من شبابيك:\n" + cart.join("\n");
-        window.open(`https://wa.me/9647883002797?text=${encodeURIComponent(msg)}`);
-    }
-
-    function logout() { showPage('userPage'); }
-    window.onload = renderUser;
-</script>
-
-</body>
-</html>
+        /* الصورة في جهة اليسار (تم تكبيرها) */
